iptables.txt
# Generated by iptables-save v1.8.4 on Thu Jan 26 20:08:09 2023
*nat
:PREROUTING ACCEPT [13799:2867928]
:INPUT ACCEPT [10620:2645307]
:OUTPUT ACCEPT [576:54546]
:POSTROUTING ACCEPT [71:5263]
:DOCKER - [0:0]
-A PREROUTING -p tcp -m tcp --dport 3001 -j DNAT --to-destination 192.168.1.2:3001
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A PREROUTING -p tcp -m tcp --dport 3003 -j DNAT --to-destination 192.168.1.7:3003
-A PREROUTING -p tcp -m tcp --dport 3005 -j DNAT --to-destination 192.168.1.12:3005
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -o ens160 -j MASQUERADE
-A POSTROUTING -d 192.168.1.0/24 -p tcp -m tcp --dport 3001 -j SNAT --to-source 192.168.1.1
-A POSTROUTING -d 192.168.1.0/24 -p tcp -m tcp --dport 3003 -j SNAT --to-source 192.168.1.1
-A POSTROUTING -d 192.168.1.0/24 -p tcp -m tcp --dport 3005 -j SNAT --to-source 192.168.1.1
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Thu Jan 26 20:08:09 2023
# Generated by iptables-save v1.8.4 on Thu Jan 26 20:08:09 2023
*filter
:INPUT ACCEPT [216634:490950147]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [102793:79159480]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Thu Jan 26 20:08:09 2023
